--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,12 +85,12 @@
             <!--</select>-->
             <!--<i class="layui-icon">&#xe615;</i>-->
         <!--</div>-->
-        <div class="navBar layui-side-scroll" id="navBar">
-            <ul class="layui-nav layui-nav-tree layui-nav-side">
-                <!--<li class="layui-nav-item layui-this">-->
-                    <!--<a href="javascript:;" data-url="#"><i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>-->
-                <!--</li>-->
-            </ul>
+        <div class="navBar layui-side-scroll">
+            <!--<ul class="layui-nav layui-nav-tree layui-nav-side">-->
+                <!--&lt;!&ndash;<li class="layui-nav-item layui-this">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<a href="javascript:;" data-url="#"><i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>&ndash;&gt;-->
+                <!--&lt;!&ndash;</li>&ndash;&gt;-->
+            <!--</ul>-->
         </div>
     </div>
     <!-- 右侧内容 -->
@@ -111,7 +111,7 @@
             </ul>
             <div class="layui-tab-content clildFrame">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="http://baidu.com"></iframe>
+                    <iframe src="#"></iframe>
                 </div>
             </div>
         </div>
@@ -126,8 +126,10 @@
 <div class="site-tree-mobile"><i class="layui-icon">&#xe602;</i></div>
 <div class="site-mobile-shade"></div>
 
-<script type="text/javascript" src="/layui/layui.js"></script>
-<script type="text/javascript" src="/js/index.js"></script>
-<script type="text/javascript" src="/js/cache.js"></script>
+<script type="text/javascript" src="../layui/layui.js"></script>
+<script type="text/javascript" src="../js/index.js"></script>
+<script type="text/javascript" src="../js/cache.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/leftNav.js"></script>
 </body>
 </html>
