--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,12 +85,7 @@
             <!--</select>-->
             <!--<i class="layui-icon">&#xe615;</i>-->
         <!--</div>-->
-        <div class="navBar layui-side-scroll">
-            <!--<ul class="layui-nav layui-nav-tree layui-nav-side">-->
-                <!--&lt;!&ndash;<li class="layui-nav-item layui-this">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<a href="javascript:;" data-url="#"><i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>&ndash;&gt;-->
-                <!--&lt;!&ndash;</li>&ndash;&gt;-->
-            <!--</ul>-->
+        <div class="navBar layui-side-scroll" id="navBar">
         </div>
     </div>
     <!-- 右侧内容 -->
@@ -111,7 +106,7 @@
             </ul>
             <div class="layui-tab-content clildFrame">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="#"></iframe>
+                    <iframe src="http://baidu.com"></iframe>
                 </div>
             </div>
         </div>
@@ -129,7 +124,7 @@
 <script type="text/javascript" src="../layui/layui.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
 <script type="text/javascript" src="../js/cache.js"></script>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/leftNav.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
 </body>
 </html>
