--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="page404">
 			<i class="layui-icon">&#xe61c;</i>
-			<p>没有权限!</p>
+			<p>啊啊啊啊!</p>
 		</div>
 	</div>
 	<script type="text/javascript" src="../layui/layui.js"></script>
