--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -59,12 +59,12 @@
                 <li class="layui-nav-item" id="userInfo">
                     <a href="javascript:;"><img src="/images/face.jpg" class="layui-nav-img userAvatar" width="35" height="35"><cite class="adminName"> <shiro:principal property="nickname"/></cite></a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" data-url="page/user/userInfo.html"><i class="seraph icon-ziliao" data-icon="icon-ziliao"></i><cite>个人资料</cite></a></dd>
-                        <dd><a href="javascript:;" data-url="page/user/changePwd.html"><i class="seraph icon-xiugai" data-icon="icon-xiugai"></i><cite>修改密码</cite></a></dd>
-                        <dd><a href="javascript:;" class="showNotice"><i class="layui-icon">&#xe645;</i><cite>系统公告</cite><span class="layui-badge-dot"></span></a></dd>
+                        <dd><a href="javascript:;" data-url="/user/userInfo.html"><i class="layui-icon layui-icon-friends"></i><cite>个人资料</cite></a></dd>
+                        <dd><a href="javascript:;" data-url="/system/changepassword"><i class="layui-icon layui-icon-password"></i><cite>修改密码</cite></a></dd>
+                        <dd><a href="javascript:;" class="showNotice"><i class="layui-icon layui-icon-notice"></i><cite>系统公告</cite><span class="layui-badge-dot"></span></a></dd>
                         <dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon">&#xe620;</i><cite>功能设定</cite><span class="layui-badge-dot"></span></a></dd>
                         <dd pc><a href="javascript:;" class="changeSkin"><i class="layui-icon">&#xe61b;</i><cite>更换皮肤</cite></a></dd>
-                        <dd><a href="#" class="signOut"><i class="seraph icon-tuichu"></i><cite>退出</cite></a></dd>
+                        <dd><a href="/logout" class="signOut"><i class="layui-icon layui-icon-close"></i><cite>退出</cite></a></dd>
                     </dl>
                 </li>
             </ul>
@@ -127,6 +127,11 @@
 <script type="text/javascript" src="../js/index.js"></script>
 <script type="text/javascript" src="../js/cache.js"></script>
 <script type="text/javascript" src="../js/leftNav.js"></script>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
+<!--<script type="text/javascript" src="../js/jquery.min.js"></script>-->
+<script type="text/javascript">
+    layui.use(['jquery', 'layer'], function () {
+        $ = layui.$;
+    })
+</script>
 </body>
 </html>
