--- a/src/main/resources/templates/user/userInfor.html
+++ b/src/main/resources/templates/user/userInfor.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <meta charset="UTF-8">
     <title>用户信息</title>
+    <link rel="stylesheet" href="/layui/css/layui.css" media="all" />
 </head>
 <body>
+<form class="layui-form">
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12">
@@ -12,75 +14,57 @@
                 <div class="layui-card-header">资料</div>
                 <div class="layui-card-body" pad15="">
 
-                    <div class="layui-form" lay-filter="">
-                        <div class="layui-form-item">
-                            <label class="layui-form-label">角色</label>
-                            <div class="layui-input-inline">
-                                <select name="role" lay-verify="">
-                                    <option value="1" selected="">超级管理员</option>
-                                    <option value="2" disabled="">普通管理员</option>
-                                    <option value="3" disabled="">审核员</option>
-                                    <option value="4" disabled="">编辑人员</option>
-                                </select><div class="layui-unselect layui-form-select"><div class="layui-select-title"><input type="text" placeholder="请选择" value="超级管理员" readonly="" class="layui-input layui-unselect"><i class="layui-edge"></i></div><dl class="layui-anim layui-anim-upbit" style=""><dd lay-value="1" class="layui-this">超级管理员</dd><dd lay-value="2" class="layui-disabled">普通管理员</dd><dd lay-value="3" class="layui-disabled">审核员</dd><dd lay-value="4" class="layui-disabled">编辑人员</dd></dl></div>
-                            </div>
-                            <div class="layui-form-mid layui-word-aux">当前角色不可更改为其它角色</div>
-                        </div>
+                    <!--<div class="layui-form" lay-filter="">-->
                         <div class="layui-form-item">
                             <label class="layui-form-label">用户名</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="username" value="xianxin" readonly="" class="layui-input">
+                                <input type="text" name="username" th:value="${user.username}" readonly="" class="layui-input">
                             </div>
-                            <div class="layui-form-mid layui-word-aux">不可修改。一般用于后台登入名</div>
                         </div>
                         <div class="layui-form-item">
-                            <label class="layui-form-label">昵称</label>
+                            <label class="layui-form-label">姓名:</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="nickname" value="贤心" lay-verify="nickname" autocomplete="off" placeholder="请输入昵称" class="layui-input">
+                                <input type="text" name="nickname" th:value="${user.nickname}" readonly="" class="layui-input">
                             </div>
+                            <!--<label class="layui-input-inline" style="border-style: ridge"><shiro:principal property="nickname"/></label>-->
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">性别</label>
                             <div class="layui-input-block">
-                                <input type="radio" name="sex" value="男" title="男"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>男</div></div>
-                                <input type="radio" name="sex" value="女" title="女" checked=""><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>女</div></div>
+                                <input type="radio" name="sex" value="1" title="男" th:checked = "${user.sex}=='1'?true:false">
+                                <input type="radio" name="sex" value="0" title="女" th:checked = "${user.sex}=='0'?true:false"/>
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">头像</label>
-                            <div class="layui-input-inline">
-                                <input name="avatar" lay-verify="required" id="LAY_avatarSrc" placeholder="图片地址" value="http://cdn.layui.com/avatar/168.jpg" class="layui-input">
-                            </div>
                             <div class="layui-input-inline layui-btn-container" style="width: auto;">
-                                <button type="button" class="layui-btn layui-btn-primary" id="LAY_avatarUpload">
+                                <button type="button" class="layui-btn layui-btn-primary" id="fileuploadbtn">
                                     <i class="layui-icon"></i>上传图片
-                                </button><input class="layui-upload-file" type="file" accept="undefined" name="file">
-                                <button class="layui-btn layui-btn-primary" layadmin-event="avartatPreview">查看图片</button>
+                                </button>
+                                <input class="layui-upload-file" type="file" accept="undefined" name="file">
+                            </div>
+                            <div>
+                                <img th:src="${user.image}" width="50px" height="50px" id="userFace">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">手机</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="cellphone" value="" lay-verify="phone" autocomplete="off" class="layui-input">
+                                <input type="text" name="cellphone" th:value="${user.phone}" lay-verify="phone" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label class="layui-form-label">邮箱</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="email" value="" lay-verify="email" autocomplete="off" class="layui-input">
+                                <input type="text" name="email" th:value="${user.email}" lay-verify="email" autocomplete="off" class="layui-input">
                             </div>
-                        </div>
-                        <div class="layui-form-item layui-form-text">
-                            <label class="layui-form-label">备注</label>
-                            <div class="layui-input-block">
-                                <textarea name="remarks" placeholder="请输入内容" class="layui-textarea"></textarea>
-                            </div>
-                        </div>
-                        <div class="layui-form-item">
-                            <div class="layui-input-block">
-                                <button class="layui-btn" lay-submit="" lay-filter="setmyinfo">确认修改</button>
-                                <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
-                            </div>
-                        </div>
+                        <!--</div>-->
+                        <!--<div class="layui-form-item">-->
+                            <!--<div class="layui-input-block">-->
+                                <!--<button class="layui-btn" lay-submit="" lay-filter="setmyinfo">确认修改</button>-->
+                                <!--<button type="reset" class="layui-btn layui-btn-primary">Reset</button>-->
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
 
                 </div>
@@ -88,5 +72,42 @@
         </div>
     </div>
 </div>
+</form>
+<script type="text/javascript" src="/layui/layui.js"></script>
+<script type="text/javascript">
+    layui.use(['jquery', 'form', 'layer', 'upload'], function () {
+        $ = layui.$,
+            upload = layui.upload,
+            form = layui.form,
+            layer = layui.layer;
+        //上传
+        upload.render({
+            elem: '#fileuploadbtn',
+            url: '/file/uploadfaceimg/',
+            // field: 'test',
+            // before: function (obj) {
+            //     //预读本地文件示例，不支持ie8
+            //     obj.preview(function (index, file, result) {
+            //         $('#userFace').attr('src', result); //图片链接（base64）
+            //     });
+            //     layer.load(2, {
+            //         shade: [0.3, '#333']
+            //     });
+            // },
+            done: function (res) {
+                layer.closeAll('loading');
+                //如果上传失败
+                if (res.data == 'success') {
+                    layer.msg("上传成功", {time: 1000}, function () {
+                        // $("input[name='icon']").val(res.data.url);
+                        $('#userFace').attr('src', res.url);
+                    })
+                } else {
+                    return layer.msg('上传失败');
+                }
+            }
+        })
+    })
+</script>
 </body>
 </html>
